responsive video size

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img class='logo' src="https://www.greenwich.church/img/greenwich-church-logo.png" alt="">
     </a>
     <div class='video'>
-        <iframe width="574" height="322" src="https://www.youtube.com/embed/wQjUG5kxCCM">
+        <iframe width="1110" height="654" src="https://www.youtube.com/embed/wQjUG5kxCCM" frameborder="0" allowfullscreen>
 </iframe>
     </div>
 <div class="blurb">
