fixed logo responsive sizing

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <title>Grace Church Greenwich - Eltham campus</title>
 </head>
 <body>
-    <a href="https://www.greenwich.church">
-        <img class='logo' src="https://www.greenwich.church/img/greenwich-church-logo.png" alt="">
-    </a>
+    <div class="logo">
+        <a href="https://www.greenwich.church">
+            <img src="https://www.greenwich.church/img/greenwich-church-logo.png" alt="">
+        </a>
+    </div>
     <div class='video'>
-        <iframe width="1110" height="654" src="https://www.youtube.com/embed/wQjUG5kxCCM" frameborder="0" allowfullscreen>
+        <iframe width="1110" height="654" src="https://www.youtube.com/embed/wQjUG5kxCCM" allowfullscreen>
 </iframe>
     </div>
 <div class="blurb">
