--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
     <title>Grace Church Greenwich - Eltham campus</title>
 </head>
 <body>
-    <div class="logo">
-        <a href="https://www.greenwich.church">
-            <img src="https://www.greenwich.church/img/greenwich-church-logo.png" alt="">
-        </a>
+    <div class="container">
+        <div class="logo-container">
+            <div class="logo">
+                <a href="https://www.greenwich.church">
+                    <img src="https://www.greenwich.church/img/greenwich-church-logo.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div class='video'>
+            <iframe width="1110" height="654" src="https://www.youtube.com/embed/wQjUG5kxCCM" allowfullscreen>
+            </iframe>
+        </div>
+        <div class="blurb">
+            <p>We are called "Grace Church" for a reason. God's grace is his extravagant, undeserved kindness to us in Jesus. And God's grace changes everything:
+            At Grace Church we seek to be a place where God's grace is received and lived out. We'd love to welcome you some time.
+            <a href="https://www.greenwich.church">Check out our main site!</a></p>
+        </div>
     </div>
-    <div class='video'>
-        <iframe width="1110" height="654" src="https://www.youtube.com/embed/wQjUG5kxCCM" allowfullscreen>
-</iframe>
-    </div>
-<div class="blurb">
-    <p>We are called "Grace Church" for a reason. God's grace is his extravagant, undeserved kindness to us in Jesus. And God's grace changes everything:
-        At Grace Church we seek to be a place where God's grace is received and lived out. We'd love to welcome you some time.
-    <a href="https://www.greenwich.church">Check out our main site!</a></p>
-</div>
 </body>
 </html>
