Some extra parameters in iframe tag

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class='video'>
-            <iframe width="1110" height="654" src="https://www.youtube.com/embed/wQjUG5kxCCM" allowfullscreen>
+            <iframe src="https://www.youtube.com/embed/wQjUG5kxCCM"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
             </iframe>
         </div>
         <div class="blurb">
